work on base-app and themes

--- a/formuladb/editor-new-page-modal.html
+++ b/formuladb/editor-new-page-modal.html
@@ -21,7 +21,7 @@
                             <div>
                                 <select class="form-control custom-select" name="startTemplateUrl">
                                     <option selected="selected" value="$LANDING-PAGE$">Landing Page Example</option>
-                                    <option value="$BLOG-POST-PAGE$">Blog Post Example Page</option>
+                                    <option value="$CONTENT-PAGE$">Content/Blog Post Example Page</option>
                                     <option data-frmdb-table="$FRMDB.$Page[]" data-frmdb-value="$FRMDB.$Page[].name" data-frmdb-table-limit="50"
                                         data-frmdb-attr="value::$FRMDB.$Page[].name"></option>
                                 </select>
