--- a/git/formuladb-env/frmdb-apps/beauty-salon/index.html
+++ b/git/formuladb-env/frmdb-apps/beauty-salon/index.html
@@ -34,7 +34,7 @@
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <div class="card-deck frmdb-card-h-50">
-            <div class="card frmdb-t-card-img border-0" style="display: grid;">
+            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/frmdb-apps/beauty-salon/static/54e4d5464b51ad14f6da8c7dda79367f1c37dfe752506c4870277bd09e4cc158ba_640.jpg" alt="">
                 </div>
@@ -50,7 +50,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-img border-0" style="display: grid;">
+            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/frmdb-apps/beauty-salon/static/55e1d3424355a814f6da8c7dda79367f1c37dfe752506c4870277bd09e49c65ab0_1280.jpg" alt="" style="object-position: center">
                 </div>
@@ -65,7 +65,7 @@
                     <span>Nails</span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-img border-0" style="display: grid;">
+            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/frmdb-apps/beauty-salon/static/54e3d24b4d53b108f5d08460962936771d3edce4524c704c7d2f7fdd964cc65d_640.jpg" alt="" style="width: 100%" class="w-100">
                 </div>
@@ -81,7 +81,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-img border-0" style="display: grid;">
+            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/frmdb-apps/beauty-salon/static/55e7dc404e53af14f6da8c7dda79367f1c37dfe752506c4870277bd09e4cc25ebf_640.jpg" alt="" class="w-100">
                 </div>
@@ -131,19 +131,19 @@
         </div>
         <div class="container">
             <div class="card-deck frmdb-cards-wrap-3 frmdb-card-h-50">
-                <div class="card frmdb-t-card-icon border border-2 border-primary p-3 frmdb-bg-dark-70">
+                <div class="card frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-mobile-alt-apple-call-cell_phone-cellphone-device-iphone-number-screen-telephone" class="text-primary m-2"></frmdb-icon>&nbsp;Call us 07XX XXX XXX
                     </h4>
                     <p data-i18n="en"></p>
                 </div>
-                <div class="card frmdb-t-card-icon border border-2 border-primary p-3 frmdb-bg-dark-70">
+                <div class="card frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <h4 data-i18n="en" contenteditable="true" spellcheckker="false">
                         <frmdb-icon name="fontawesome-solid-map-marker-alt-address-coordinates-destination-gps-localize-location-map-navigation-paper-pin-place-point_of_interest-position-route-travel" class="text-primary m-2"></frmdb-icon>&nbsp; &nbsp; Visit us
                     </h4>
                     <p data-i18n="en">Maecenas tempor erat eget ornare vulputate.&nbsp;</p>
                 </div>
-                <div class="card frmdb-t-card-icon border border-2 border-primary p-3 frmdb-bg-dark-70">
+                <div class="card frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-clock-date-late-schedule-time-timer-timestamp-watch" class="text-primary m-2"></frmdb-icon>&nbsp;We're here 9AM - 9PM
                     </h4>
