--- a/git/formuladb-env/frmdb-apps/formuladb-io/index.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/index.html
@@ -10,7 +10,7 @@
             max-height: 90vh;
         }
     </style>
-    <span class="badge badge-danger shadow" style="width: 12em; position: fixed; top: 5px; right: 5px;">Alpha 0.0.22</span>
+    <div data-frmdb-fragment="versions.html"></div>
     <header class="container-fluid frmdb-bg-primary-circles-1">
         <div data-frmdb-fragment="_nav.html"></div>
         <div class="container py-lg-md d-flex">
