--- a/git/formuladb-env/frmdb-apps/health-guardians/index.html
+++ b/git/formuladb-env/frmdb-apps/health-guardians/index.html
@@ -28,7 +28,7 @@
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <div class="card-deck">
-            <div class="card frmdb-t-card-img">
+            <div class="card frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/health-guardians/static/52e6d2444e52ad14f6da8c7dda79367f1c37dfe752506c4870277bdd954bcd5bbd_640.jpg" alt="">
                 </div>
@@ -46,7 +46,7 @@
                     </a>
                 </div>
             </div>
-            <div class="card frmdb-t-card-img">
+            <div class="card frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/health-guardians/static/57e1d14a4b56a514f6da8c7dda79367f1c37dfe752506c4870277bdd954bcd5bbd_640.jpg" alt="">
                 </div>
@@ -62,7 +62,7 @@
                     <div>CONTACT US&nbsp;</div>
                 </a>
             </div>
-            <div class="card frmdb-t-card-img">
+            <div class="card frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/health-guardians/static/54e1d1424857a514f6da8c7dda79367f1c37dfe752506c4870277bdd954ac45cbe_640.jpg" alt="">
                 </div>
@@ -77,7 +77,7 @@
                 </a>
                 <div class="frmdb-t-card-action"></div>
             </div>
-            <div class="card frmdb-t-card-img">
+            <div class="card frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/health-guardians/static/55e0d5464c5bae14f6da8c7dda79367f1c37dfe752506c4870277bdd954ac45cbe_640.png" alt="">
                 </div>
