--- a/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
@@ -75,7 +75,7 @@
                 <h2 class="title_color">Available Rooms</h2>
                 <p>We all live in an age that belongs to the young at heart. Life that is becoming extremely fast,</p>
                 <div class="card-deck frmdb-cards-wrap-3">
-                    <div class="card frmdb-t-card-img" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~07-Ball">
+                    <div class="card frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~07-Ball">
                         <div class="frmdb-t-img overflow-hidden">
                             <img src="theme/image/interior-2685521_1920.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
                         </div>
@@ -93,7 +93,7 @@
                             </span>
                         </div>
                     </div>
-                    <div class="card frmdb-t-card-img" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~06-Conference">
+                    <div class="card frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~06-Conference">
                         <div class="frmdb-t-img overflow-hidden">
                             <img src="theme/image/living-room-581073_1920.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
                         </div>
@@ -111,7 +111,7 @@
                             </span>
                         </div>
                     </div>
-                    <div class="card frmdb-t-card-img" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~05-EconomySigle">
+                    <div class="card frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~05-EconomySigle">
                         <div class="frmdb-t-img overflow-hidden">
                             <img src="theme/image/bedroom-1872196_1920.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
                         </div>
@@ -129,7 +129,7 @@
                             </span>
                         </div>
                     </div>
-                    <div class="card frmdb-t-card-img" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~04-EconomyDouble">
+                    <div class="card frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~04-EconomyDouble">
                         <div class="frmdb-t-img overflow-hidden">
                             <img src="theme/image/room4.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
                         </div>
@@ -147,7 +147,7 @@
                             </span>
                         </div>
                     </div>
-                    <div class="card frmdb-t-card-img" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~03-Honeymoon">
+                    <div class="card frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~03-Honeymoon">
                         <div class="frmdb-t-img overflow-hidden">
                             <img src="theme/image/room3.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
                         </div>
@@ -165,7 +165,7 @@
                             </span>
                         </div>
                     </div>
-                    <div class="card frmdb-t-card-img" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~02-SigleDeluxe">
+                    <div class="card frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~02-SigleDeluxe">
                         <div class="frmdb-t-img overflow-hidden">
                             <img src="theme/image/room2.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
                         </div>
@@ -183,7 +183,7 @@
                             </span>
                         </div>
                     </div>
-                    <div class="card frmdb-t-card-img" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~01-DoubleDeluxe">
+                    <div class="card frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~01-DoubleDeluxe">
                         <div class="frmdb-t-img overflow-hidden">
                             <img src="theme/image/room1.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
                         </div>
@@ -201,7 +201,7 @@
                             </span>
                         </div>
                     </div>
-                    <div class="card frmdb-t-card-img">
+                    <div class="card frmdb-t-card-media-main">
                         <div class="frmdb-t-img overflow-hidden">
                             <img src="/formuladb-env/frmdb-apps/base-app/static/card2.jpg" alt="" class="">
                         </div>
@@ -219,7 +219,7 @@
                             </span>
                         </div>
                     </div>
-                    <div class="card frmdb-t-card-img">
+                    <div class="card frmdb-t-card-media-main">
                         <div class="frmdb-t-img overflow-hidden">
                             <img src="/formuladb-env/frmdb-apps/base-app/static/card3.jpg" alt="" class="">
                         </div>
@@ -237,7 +237,7 @@
                             </span>
                         </div>
                     </div>
-                    <div class="card frmdb-t-card-img">
+                    <div class="card frmdb-t-card-media-main">
                         <div class="frmdb-t-img overflow-hidden">
                             <img src="/formuladb-env/frmdb-apps/base-app/static/card4.jpg" alt="" class="">
                         </div>
