--- a/git/formuladb-env/frmdb-apps/photography-services/index.html
+++ b/git/formuladb-env/frmdb-apps/photography-services/index.html
@@ -26,7 +26,7 @@
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <div class="card-deck">
-            <div class="card frmdb-t-card-img border-0" style="display: grid;">
+            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/frmdb-apps/photography-services/static/50e9d542485ab108f5d08460962936771d3edce4524c704c7d2f7ad19249c55e_640.jpg" alt="">
                 </div>
@@ -39,7 +39,7 @@
                 <a href="javascript:void(0)" class="btn btn-primary m-auto" data-i18n="en">See more</a>
                 <div class="frmdb-t-card-note text-center text-info font-weight-bold"></div>
             </div>
-            <div class="card frmdb-t-card-img border-0" style="position: relative; left: 0px; display: grid;">
+            <div class="card frmdb-t-card-media-main border-0" style="position: relative; left: 0px; display: grid;">
                 <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/frmdb-apps/photography-services/static/54e3d3454e51a414f6da8c7dda79367f1c37dfe752506c4870277bd59248c059b9_640.jpg" alt="">
                 </div>
@@ -56,7 +56,7 @@
                 </a>
                 <div class="frmdb-t-card-note text-center text-info font-weight-bold"></div>
             </div>
-            <div class="card frmdb-t-card-img border-0" style="display: grid;">
+            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/frmdb-apps/photography-services/static/50e7d2434b4fad0bffd8992cc6293e76143ddfe44e507441752e7ed1914acc_640.jpg" alt="">
                 </div>
@@ -71,7 +71,7 @@
                 </a>
                 <div class="frmdb-t-card-note text-center text-info font-weight-bold"></div>
             </div>
-            <div class="card frmdb-t-card-img border-0" style="display: grid;">
+            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/frmdb-apps/photography-services/static/51e2d0474950b108f5d08460962936771d3edce4524c704c7d2f7ad1924bc759_640.jpg" alt="">
                 </div>
