--- a/git/formuladb-env/frmdb-apps/base-app/components-nav.html
+++ b/git/formuladb-env/frmdb-apps/base-app/components-nav.html
@@ -2,13 +2,23 @@
     <ul class="nav flex-column">
         <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder text-dark">Landing Page</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/landing-page.html" >Cover</a></li>
-        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/landing-page.html#thememediacards" >Theme Media Cards</a></li>
-        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/landing-page.html#mediasectionparallax" >Media Section Parallax</a></li>
-        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/landing-page.html#themeiconcards" >Theme Icon Cards</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/landing-page.html#thememediacards" >Media Cards</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/landing-page.html#mediasectionmainleft" >Media Section Main</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/landing-page.html#mediasectionminorright" >Media Section Minor</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/landing-page.html#themeiconcards" >Icon Cards</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/landing-page.html#mediasectionminorleft" >Media Section Minor</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder text-dark">Content Page</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/content-page.html" >Header</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/content-page.html#mainarticle" >Main Article</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/content-page.html#headings" >Heading Examples</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/content-page.html#display-headings" >Display Headings</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/content-page.html#body-text" >Body Text</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/content-page.html#blockquotes" >Blockquotes</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/content-page.html#lists" >Lists</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/content-page.html#text-utilities" >Text Utilities</a></li>
         <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder text-dark">Basic Elements</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/elements.html#navbars" >Navbars</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/elements.html#buttons" >Buttons</a></li>
-        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/elements.html#typography" >Typography</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/elements.html#tables" >Tables</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/elements.html#navs" >Navs</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/elements.html#indicators" >Indicators</a></li>
