--- a/git/formuladb-env/frmdb-apps/formuladb-io/versions.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/versions.html
@@ -1,14 +1,18 @@
-<div class="btn-group mr-3 dropdown frmdb-dropdown-hover" style="width: 12em; position: fixed; top: 5px; right: 5px;" role="menu">
-    <span class="badge badge-danger shadow" >Alpha 0.0.22</span>
-    <button class="btn" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <frmdb-icon data-frmdb-attr="name:selectedFlag"></frmdb-icon>
-    </button>
+<div class="dropdown frmdb-dropdown-hover" style="width: 12em; float: right; position: relative; z-index: 10" role="menu" data-frmdb-fragment="versions.html">
+    <span class="badge badge-danger shadow">Alpha 0.0.22</span>
     <div class="dropdown-menu" aria-labelledby="frmdb-editor-i18n-select">
-        <a class="dropdown-item text-nowrap" data-frmdb-table="languages[]" 
-            data-frmdb-attr="href:languages[].urlPathname" data-frmdb-editor-link>
-            <frmdb-icon data-frmdb-attr="name:languages[].flag"></frmdb-icon>
-            <span data-frmdb-value="languages[].fullLanguage"></span>
-            <button data-frmdb-if="languages[].canAutoTranslate" class="badge" data-frmdb-attr="title:languages[].titleAutoTranslate"><frmdb-icon name="fontawesome-solid-robot-android-automate-computer-cyborg"></frmdb-icon></button>
-        </a>
+        <span class="dropdown-item text-nowrap"><b>0.0.22</b> on 2020-03-31</span>
+        <span class="dropdown-item text-nowrap"><b>0.0.21</b> on 2019-11-20</span>
+        <span class="dropdown-item text-nowrap"><b>0.0.20</b> on 2019-09-01</span>
+        <span class="dropdown-item text-nowrap"><b>0.0.15</b> on 2019-08-26</span>
+        <span class="dropdown-item text-nowrap"><b>0.0.9</b> on 2019-04-29</span>
+        <span class="dropdown-item text-nowrap"><b>0.0.8</b> on 2019-04-11</span>
+        <span class="dropdown-item text-nowrap"><b>0.0.7</b> on 2019-03-11</span>
+        <span class="dropdown-item text-nowrap"><b>0.0.6</b> on 2019-03-22</span>
+        <span class="dropdown-item text-nowrap"><b>0.0.5</b> on 2019-03-17</span>
+        <span class="dropdown-item text-nowrap"><b>0.0.4</b> on 2019-03-16</span>
+        <span class="dropdown-item text-nowrap"><b>0.0.3</b> on 2019-03-13</span>
+        <span class="dropdown-item text-nowrap"><b>0.0.2</b> on 2019-03-10</span>
+        <span class="dropdown-item text-nowrap"><b>0.0.1</b> on 2018-08-26</span>
     </div>
 </div>
