--- a/git/formuladb-env/frmdb-apps/hotel-booking/index.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/index.html
@@ -32,7 +32,7 @@
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <div class="card-deck">
-            <div class="card frmdb-t-card-img">
+            <div class="card frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room4.jpg" alt="" class="">
                 </div>
@@ -50,7 +50,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-img">
+            <div class="card frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room3.jpg" alt="" class="">
                 </div>
@@ -68,7 +68,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-img">
+            <div class="card frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room1.jpg" alt="" class="">
                 </div>
@@ -86,7 +86,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-img">
+            <div class="card frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room4.jpg" alt="" class="">
                 </div>
@@ -140,39 +140,39 @@
         </div>
         <div class="container">
             <div class="card-deck frmdb-cards-wrap-3">
-                <div class="card frmdb-t-card-icon">
+                <div class="card frmdb-t-card-icon-main">
                     <h4>
                         <frmdb-icon name="fontawesome-solid-utensils-cutlery-dining-dinner-eat-food-fork-knife-restaurant"></frmdb-icon> Food
                     </h4>
                     <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
                 </div>
-                <div class="card frmdb-t-card-icon">
+                <div class="card frmdb-t-card-icon-main">
                     <h4>
                         <frmdb-icon name="fontawesome-solid-biking-bicycle-bike-cycle-cycling-ride-wheel"></frmdb-icon> Sports
                     </h4>
                     <p>Maecenas tempor erat eget ornare vulputate. Praesent sem mauris, varius ornare mattis ac, iaculis eget neque.</p>
                 </div>
-                <div class="card frmdb-t-card-icon">
+                <div class="card frmdb-t-card-icon-main">
                     <h4>
                         <frmdb-icon name="fontawesome-solid-car-auto-automobile-sedan-transportation-travel-vehicle"></frmdb-icon> Auto
                     </h4>
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
                 </div>
-                <div class="card frmdb-t-card-icon">
+                <div class="card frmdb-t-card-icon-main">
                     <h4>
                         <frmdb-icon name="fontawesome-solid-tv-computer-display-monitor-television"></frmdb-icon> TV
                     </h4>
                     <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
                 </div>
-                <div class="card frmdb-t-card-icon">
+                <div class="card frmdb-t-card-icon-main">
                     <h4>
                         <frmdb-icon name="fontawesome-solid-glass-martini-alt-alcohol-bar-beverage-drink-liquor"></frmdb-icon> Drinks
                     </h4>
                     <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
                     </p>
                 </div>
-                <div class="card frmdb-t-card-icon">
+                <div class="card frmdb-t-card-icon-main">
                     <h4>
                         <frmdb-icon name="fontawesome-solid-building-apartment-business-city-company-office-work"></frmdb-icon> Building
                     </h4>
