--- a/git/formuladb-env/frmdb-apps/kids-playground/index.html
+++ b/git/formuladb-env/frmdb-apps/kids-playground/index.html
@@ -38,7 +38,7 @@
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <div class="card-deck">
-            <div class="card frmdb-t-card-img border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
+            <div class="card frmdb-t-card-media-main border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/kids-playground/static/57e0dc414350ad14f6da8c7dda79367f1c37dfe752506c4870277ad49e4ac25ab9_1280.jpg" alt="">
                 </div>
@@ -56,7 +56,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-img border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
+            <div class="card frmdb-t-card-media-main border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/kids-playground/static/54e2d4464c52ad14f6da8c7dda79367f1c37dfe752506c4870277ad5924ac05bb1_640.jpg" alt="">
                 </div>
@@ -74,7 +74,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-img border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
+            <div class="card frmdb-t-card-media-main border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/kids-playground/static/57e4d3444850a414f6da8c7dda79367f1c37dfe752506c4870277ad49e45c750bb_640.jpg" alt="">
                 </div>
@@ -92,7 +92,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-img border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
+            <div class="card frmdb-t-card-media-main border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/kids-playground/static/52e8d5474f5bb108f5d08460962936771d3edce4524c704c7d2e7ad49745c558_1280.jpg" alt="" width="250">
                 </div>
@@ -152,39 +152,39 @@
         </div>
         <div class="container">
             <div class="card-deck frmdb-cards-wrap-3">
-                <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
+                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-expand-arrow-bigger-enlarge-resize"></frmdb-icon>&nbsp;600 square meters
                     </h4>
                     <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
                 </div>
-                <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
+                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-handshake-agreement-greeting-meeting-partnership"></frmdb-icon>&nbsp;exclusiveness
                     </h4>
                     <p>Maecenas tempor erat eget ornare vulputate. Praesent sem mauris, varius ornare mattis ac, iaculis eget neque.</p>
                 </div>
-                <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
+                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-user-clock-alert-person-remind-time"></frmdb-icon>&nbsp;unlimited laser tag
                     </h4>
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
                 </div>
-                <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
+                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-hamburger-bacon-beef-burger-burger_king-cheeseburger-fast_food-grill-ground_beef-mcdonalds-sandwich"></frmdb-icon>&nbsp;kids menu
                     </h4>
                     <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
                 </div>
-                <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
+                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-gamepad-arcade-controller-d-pad-joystick-video-video_game"></frmdb-icon>&nbsp;board games
                     </h4>
                     <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
                     </p>
                 </div>
-                <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
+                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-parking-auto-car-garage-meter"></frmdb-icon>&nbsp;parking
                     </h4>
