--- a/git/formuladb-env/frmdb-apps/law-firm/index.html
+++ b/git/formuladb-env/frmdb-apps/law-firm/index.html
@@ -42,39 +42,39 @@
         </div>
         <div class="container">
             <div class="card-deck frmdb-cards-wrap-3">
-                <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
+                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-gavel-hammer-judge-law-lawyer-opinion"></frmdb-icon>&nbsp;criminal law
                     </h4>
                     <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
                 </div>
-                <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
+                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-university-bank-building-college-higher_education_-_students-institution"></frmdb-icon>&nbsp;legal counseling
                     </h4>
                     <p>Maecenas tempor erat eget ornare vulputate. Praesent sem mauris, varius ornare mattis ac, iaculis eget neque.</p>
                 </div>
-                <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
+                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-registered-copyright-mark-trademark"></frmdb-icon>&nbsp;data protection
                     </h4>
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
                 </div>
-                <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
+                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-search-dollar-bigger-enlarge-find-magnify-money-preview-zoom"></frmdb-icon> Tax advisory
                     </h4>
                     <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
                 </div>
-                <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
+                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-balance-scale-left-justice-legal-measure-unbalanced-weight"></frmdb-icon>&nbsp;litigation
                     </h4>
                     <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
                     </p>
                 </div>
-                <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
+                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-brain-cerebellum-gray_matter-intellect-medulla_oblongata-mind-noodle-wit"></frmdb-icon>&nbsp;intelectual&nbsp; &nbsp; &nbsp; property
                     </h4>
