fix Clean theme

--- a/git/formuladb-env/frmdb-apps/base-app/_footer.html
+++ b/git/formuladb-env/frmdb-apps/base-app/_footer.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-3  col-md-6 col-sm-6">
-            <h5>About Agency</h5>
+            <h5>About</h5>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sit amet hendrerit neque. Mauris egestas aliquam purus sed
                     consequat.</p>
         </div>
