--- a/git/formuladb-env/frmdb-apps/base-app/landing-page.html
+++ b/git/formuladb-env/frmdb-apps/base-app/landing-page.html
@@ -30,8 +30,8 @@
             <h2 id="thememediacards">Cards with Images</h2>
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
-        <div class="card-deck">
-            <div class="card frmdb-t-card-media-main">
+        <div class="frmdb-t-card-deck frmdb-cards-4">
+            <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/base-app/static/card1.jpg" alt="">
                 </div>
@@ -49,7 +49,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main">
+            <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/base-app/static/card2.jpg" alt="">
                 </div>
@@ -67,7 +67,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main">
+            <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/base-app/static/card3.jpg" alt="">
                 </div>
@@ -85,7 +85,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main">
+            <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/base-app/static/card4.jpg" alt="">
                 </div>
