--- a/git/formuladb-env/frmdb-apps/dental-health/index.html
+++ b/git/formuladb-env/frmdb-apps/dental-health/index.html
@@ -176,7 +176,7 @@
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
         </div>
         <div class="container">
-            <div class="card-deck frmdb-cards-wrap-3">
+            <div class="card-deck frmdb-cards-3">
                 <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h5 data-i18n="en">dental implant</h5>
                     <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
