--- a/git/formuladb-env/frmdb-apps/formuladb-io/index.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/index.html
@@ -53,7 +53,7 @@
                 <button type="button" class="btn btn-light text-muted flex-grow-0" data-frmdb-table="$FRMDB.AppCategory[]" data-frmdb-value=":$ID:$FRMDB.AppCategory[]._id" data-frmdb-table-limit="20" data-frmdb-record="AppCategory~~100 Food &amp; Travel">100 Food &amp; Travel</button>
             </div>
         </div>
-        <div class="card-deck frmdb-cards-wrap-4 frmdb-isotope-grid">
+        <div class="card-deck frmdb-cards-4 frmdb-isotope-grid">
             <div class="card hvr-float bg-white shadow" data-category="AppCategory~~Business Administration" data-frmdb-table="$FRMDB.SampleApp[]" data-frmdb-record="SampleApp~~010 Inventory" data-frmdb-table-limit="51">
                 <div class="card-rem card-body text-center">
                     <div class="frmdb-ribbon frmdb-ribbon-top-left">
