--- a/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
@@ -74,7 +74,7 @@
             <div class="section_title text-center mb-3">
                 <h2 class="title_color">Available Rooms</h2>
                 <p>We all live in an age that belongs to the young at heart. Life that is becoming extremely fast,</p>
-                <div class="card-deck frmdb-cards-wrap-3">
+                <div class="card-deck frmdb-cards-3">
                     <div class="card frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~07-Ball">
                         <div class="frmdb-t-img overflow-hidden">
                             <img src="theme/image/interior-2685521_1920.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
