--- a/git/formuladb-env/frmdb-apps/apollo-medical-center/index.html
+++ b/git/formuladb-env/frmdb-apps/apollo-medical-center/index.html
@@ -43,7 +43,7 @@
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
         </div>
         <div class="container">
-            <div class="card-deck frmdb-cards-wrap-3">
+            <div class="card-deck frmdb-cards-3">
                 <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-user-md-job-medical-nurse-occupation-physician-profile-surgeon"></frmdb-icon> Doctors
