--- a/git/formuladb-env/frmdb-apps/beauty-salon/index.html
+++ b/git/formuladb-env/frmdb-apps/beauty-salon/index.html
@@ -130,7 +130,7 @@
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
         </div>
         <div class="container">
-            <div class="card-deck frmdb-cards-wrap-3 frmdb-card-h-50">
+            <div class="card-deck frmdb-cards-3 frmdb-card-h-50">
                 <div class="card frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-mobile-alt-apple-call-cell_phone-cellphone-device-iphone-number-screen-telephone" class="text-primary m-2"></frmdb-icon>&nbsp;Call us 07XX XXX XXX
