--- a/git/formuladb-env/frmdb-apps/blog-add-on-app/index.html
+++ b/git/formuladb-env/frmdb-apps/blog-add-on-app/index.html
@@ -41,7 +41,7 @@
                 <div class="input-group mb-3"></div>
             </div>
         </div>
-        <div class="card-deck frmdb-cards-wrap-3">
+        <div class="card-deck frmdb-cards-3">
             <div class="card frmdb-t-card-media-main" data-frmdb-table-limit="10" data-frmdb-table="$FRMDB.$Page[]">
                 <div class="frmdb-t-img overflow-hidden frmdb-bg-dark-20">
                     <img src="/formuladb-env/frmdb-apps/blog-add-on-app/static/blog-post-1.png" alt="" data-frmdb-value="$FRMDB.$Page[].screenshot" class="opacity-0p3">
@@ -128,7 +128,7 @@
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
         </div>
         <div class="container">
-            <div class="card-deck frmdb-cards-wrap-3">
+            <div class="card-deck frmdb-cards-3">
                 <div class="card frmdb-t-card-icon-main">
                     <h4>
                         <frmdb-icon name="fontawesome-solid-utensils-cutlery-dining-dinner-eat-food-fork-knife-restaurant"></frmdb-icon> Food
