--- a/git/formuladb-env/frmdb-apps/click-hostel/index.html
+++ b/git/formuladb-env/frmdb-apps/click-hostel/index.html
@@ -168,7 +168,7 @@
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
         </div>
         <div class="container">
-            <div class="card-deck frmdb-cards-wrap-3">
+            <div class="card-deck frmdb-cards-3">
                 <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-utensils-cutlery-dining-dinner-eat-food-fork-knife-restaurant"></frmdb-icon> breakfast
