--- a/git/formuladb-env/frmdb-apps/design-therapy/index.html
+++ b/git/formuladb-env/frmdb-apps/design-therapy/index.html
@@ -101,7 +101,7 @@
             <p data-i18n="en">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
         </div>
         <div class="container">
-            <div class="card-deck frmdb-cards-wrap-3 frmdb-card-h-50">
+            <div class="card-deck frmdb-cards-3 frmdb-card-h-50">
                 <div class="card frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <frmdb-icon name="fontawesome-solid-id-card-alt-contact-demographics-document-identification-issued-profile" class="text-primary sz-4"></frmdb-icon>
                     <h4 data-i18n="en"> short survey
