--- a/git/formuladb-env/frmdb-apps/hotel-booking/index.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/index.html
@@ -139,7 +139,7 @@
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
         </div>
         <div class="container">
-            <div class="card-deck frmdb-cards-wrap-3">
+            <div class="card-deck frmdb-cards-3">
                 <div class="card frmdb-t-card-icon-main">
                     <h4>
                         <frmdb-icon name="fontawesome-solid-utensils-cutlery-dining-dinner-eat-food-fork-knife-restaurant"></frmdb-icon> Food
