fix card alignment

--- a/git/formuladb-env/frmdb-apps/base-app/landing-page.html
+++ b/git/formuladb-env/frmdb-apps/base-app/landing-page.html
@@ -33,9 +33,9 @@
                 <div class="frmdb-t-img overflow-hidden"
                     style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/card1.jpg')">
                 </div>
-                <div class="frmdb-t-card-title">Card 1 title</div>
-                <div class="frmdb-t-card-subtitle">Card 1 subtitle</div>
-                <div class="frmdb-t-card-body">
+                <div class="card-body">
+                    <h5>Card 1 title</h5>
+                    <h6>Card 1 subtitle</h6>
                     <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
                 <div class="frmdb-t-card-action">
@@ -51,9 +51,9 @@
                 <div class="frmdb-t-img overflow-hidden"
                     style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/card2.jpg')">
                 </div>
-                <div class="frmdb-t-card-title">Card 2 title</div>
-                <div class="frmdb-t-card-subtitle">Card 2 subtitle</div>
-                <div class="frmdb-t-card-body">
+                <div class="card-body">
+                    <h5>Card 2 title</h5>
+                    <h6>Card 2 subtitle</h6>
                     <p>Integer sit amet nisi viverra, pharetra nibh</p>
                 </div>
                 <div class="frmdb-t-card-action">
@@ -69,9 +69,9 @@
                 <div class="frmdb-t-img overflow-hidden"
                     style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/card3.jpg')">
                 </div>
-                <div class="frmdb-t-card-title">Card 3 title</div>
-                <div class="frmdb-t-card-subtitle">Card 3 subtitle</div>
-                <div class="frmdb-t-card-body">
+                <div class="card-body">
+                    <h5>Card 3 title</h5>
+                    <h6>Card 3 subtitle</h6>
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
                 <div class="frmdb-t-card-action">
@@ -87,9 +87,9 @@
                 <div class="frmdb-t-img overflow-hidden"
                     style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/card4.jpg')">
                 </div>
-                <div class="frmdb-t-card-title">Card 4 title</div>
-                <div class="frmdb-t-card-subtitle">Card 4 subtitle</div>
-                <div class="frmdb-t-card-body">
+                <div class="card-body">
+                    <h5>Card 4 title</h5>
+                    <h6>Card 4 subtitle</h6>
                     <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
                 <div class="frmdb-t-card-action">
