modified backgrounds fmk to allow 3 "overlay" blend mode backgrounds

--- a/git/formuladb-env/frmdb-apps/base-app/landing-page.html
+++ b/git/formuladb-env/frmdb-apps/base-app/landing-page.html
@@ -132,7 +132,7 @@
             </div>
         </div>
     </section>
-    <section class="frmdb-section-dark my-5 py-5 frmdb-bg-tint-parallax frmdb-bg-tint-secondary-75" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg3.jpg')">
+    <section class="frmdb-section-dark my-5 py-5 frmdb-bg-2 frmdb-bg-parallax frmdb-bg--user--dark-solid-tint-75" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg3.jpg')">
         <div class="section_title text-center">
             <h2 id="themeiconcards">Cards with Icons</h2>
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
