adde Lines theme

--- a/git/formuladb-env/frmdb-apps/base-app/landing-page.html
+++ b/git/formuladb-env/frmdb-apps/base-app/landing-page.html
@@ -24,6 +24,7 @@
         <div class="frmdb-t-section-divider"></div>
     </header>
     <section class="frmdb-section-light container py-5">
+        <div class="frmdb-t-section-divider"></div>
         <div class="text-center mb-5">
             <h2 id="thememediacards">Cards with Images</h2>
             <p>Section lead paragraph, some text about the content described in this section.</p>
@@ -102,6 +103,7 @@
                 </div>
             </div>
         </div>
+        <div class="frmdb-t-section-divider"></div>
     </section>
     <section class="frmdb-t-media-section-main" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg-right.jpg')">
         <div class="frmdb-t-section-divider"></div>
@@ -118,6 +120,7 @@
         <div class="frmdb-t-section-divider"></div>
     </section>
     <section class="frmdb-section-light container">
+        <div class="frmdb-t-section-divider"></div>
         <div class="row">
             <div class="col">
                 <img class="img-fluid" src="/formuladb-env/frmdb-apps/base-app/static/section1.jpg" alt="...">
@@ -131,8 +134,10 @@
                 </div>
             </div>
         </div>
+        <div class="frmdb-t-section-divider"></div>
     </section>
-    <section class="frmdb-section-dark my-5 py-5 frmdb-bg-2 frmdb-bg-parallax frmdb-bg--user--dark-solid-tint-75" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg3.jpg')">
+    <section class="frmdb-t-section-cards-icon" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg3.jpg')">
+        <div class="frmdb-t-section-divider"></div>
         <div class="section_title text-center">
             <h2 id="themeiconcards">Cards with Icons</h2>
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
@@ -183,6 +188,7 @@
         <div class="frmdb-t-section-divider"></div>
     </section>
     <section class="frmdb-section-light container py-5 my-5">
+        <div class="frmdb-t-section-divider"></div>
         <div class="row">
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
@@ -196,6 +202,7 @@
                 <img class="img-fluid" src="/formuladb-env/frmdb-apps/base-app/static/section2.jpg" alt="...">
             </div>
         </div>
+        <div class="frmdb-t-section-divider"></div>
     </section>
     <div class="frmdb-t-section-divider"></div>
     <div class="frmdb-section-dark" data-frmdb-fragment="_footer.html"></div>
